--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://vladimirseoadv.github.io/github-user-search/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>User search</title>
     <script type="module" crossorigin src="https://vladimirseoadv.github.io/github-user-search/assets/index.edcf3668.js"></script>
     <link rel="stylesheet" href="https://vladimirseoadv.github.io/github-user-search/assets/index.cc8cd6e7.css">
   </head>
